--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,8 +1,18 @@
 // app global css in SCSS form
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@300&display=swap");
+
+/*
 .q-header {
   background-color: #89a4fc;
-}
+} */
+
+/* 如果是要動全部的上方底色，請改quasar.variables.scss  https://quasar.dev/style/color-palette/ */
+
+/* 同一個色系，如果是白底的話，對比可能要再強一點 */
+
+/* 可以安裝Lighthouse 這個Chrome Extension來做檢測對比  */
+/* https://chromewebstore.google.com/detail/lighthouse/blipmdconlkpinefehnmjammfjpmpbjk?hl=zh-TW&pli=1 */
+
 p {
   font-size: large;
   white-space: pre-wrap;
@@ -15,4 +25,17 @@ p {
 .move-to-left {
   position: absolute;
   right: 0.72em;
+}
+
+.p-text {
+  background-color: #fcffed;
+  line-height: 1.6em;
+  padding: 0.5em;
+  margin-block-end: 0;
+  max-width: 100vw;
+}
+
+#c-page {
+  padding: 0;
+  background: linear-gradient(to bottom, #fff2c0, #ffd9d9);
 }
