--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -12,7 +12,7 @@
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
-$primary: #6804a3;
+$primary: #4e609a;
 $secondary: #f6a345;
 $accent: #ff0e0e;
 
