--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -6,8 +6,9 @@
   background-color: #89a4fc;
 } */
 
-/* 如果是要動全部的上方底色，請改quasar.variables.scss  https://quasar.dev/style/color-palette/ */
+/* 如果是要動全部的上方底色，請改quasar.variables.scss /
 
+/* 如果是按鈕或其他的部分，也可以使用Quasar色彩選擇， 在attribute上設定顏色： 請參考Quasar色票  https://quasar.dev/style/color-palette/ */
 /* 同一個色系，如果是白底的話，對比可能要再強一點 */
 
 /* 可以安裝Lighthouse 這個Chrome Extension來做檢測對比  */
