--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -8,7 +8,7 @@
 .flex-start-center {
   display: flex;
   justify-content: center;
-  align-items: start;
+  align-items: flex-start;
 }
 
 /* 可能要讀一下彈性盒子的用法 https://developer.mozilla.org/zh-TW/docs/Web/CSS/CSS_flexible_box_layout/Basic_concepts_of_flexbox */
