建置表單的雛型

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -52,3 +52,11 @@ p {
   padding: 0;
   background: linear-gradient(to bottom, #fff2c0, #ffd9d9);
 }
+
+.text-white {
+  color: white !important;
+}
+
+.padding {
+  padding: 1.62em;
+}
