暫時使用定價收費
加入readonly在q-input上可以讓input變成唯讀

#35

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -57,7 +57,7 @@ label {
 .p-text {
   background-color: #fcffed;
   line-height: 1.6em;
-  padding: 0.5em;
+  padding: 0.5em 1.6em;
   margin-block-end: 0;
   max-width: 100vw;
 }
