--- a/src/css/desktop.scss
+++ b/src/css/desktop.scss
@@ -6,8 +6,7 @@
   }
   .p-text {
     border-radius: 10px;
-    padding: 3em 2em;
-    max-width: 80vw;
+    padding: 3em 6em !important;
     box-shadow: 5px 5px 5px rgb(187, 187, 187);
   }
   #c-page {
