--- a/src/css/desktop.scss
+++ b/src/css/desktop.scss
@@ -9,10 +9,7 @@
     padding: 3em 6em !important;
     box-shadow: 5px 5px 5px rgb(187, 187, 187);
   }
-  #c-page {
-    padding-bottom: 1em;
-  }
-  .rwd-flexbox {
+  .flex-rwd {
     flex-direction: row;
   }
 }
