--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -12,9 +12,9 @@
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
-$primary: #7904da;
-$secondary: #f6a345;
-$accent: #ff0e0e;
+$primary: #7f47dd;
+$secondary: #ffffff;
+$accent: #e889d4;
 
 $dark: #1d1d1d;
 $dark-page: #121212;
