--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,6 +1,10 @@
 // app global css in SCSS form
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@300&display=swap");
 
+footer .q-toolbar__title {
+  font-size: 1rem;
+}
+
 .q-tab__icon {
   font-size: 2.5rem;
   margin: 0.6em 0;
