--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -12,14 +12,14 @@
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
-$primary: #7f47dd;
-$secondary: #ffffff;
-$accent: #e889d4;
+$primary: #7f47dd; // 主色調
+$secondary: #ffffff; // 副色調
+$accent: #e889d4; // 強調色
 
-$dark: #1d1d1d;
-$dark-page: #121212;
+$dark: #1d1d1d; // 深色模式
+$dark-page: #121212; // 深色模式頁面
 
-$positive: #21ba45;
-$negative: #c10015;
-$info: #31ccec;
-$warning: #f2c037;
+$positive: #21ba45; // 正向情緒
+$negative: #c10015; // 負向情緒
+$info: #31ccec; // 資訊提示
+$warning: #f2c037; // 警告提示
