改加入我們的底色為 #e6e6e6

--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -19,7 +19,7 @@ $accent: #e889d4; // 強調色
 $dark: #1d1d1d; // 深色模式
 $dark-page: #121212; // 深色模式頁面
 
-$positive: #21ba45; // 正向情緒
+$positive: #e6e6e6; // 正向情緒
 $negative: #c10015; // 負向情緒
 $info: #31ccec; // 資訊提示
 $warning: #f2c037; // 警告提示
